<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <CheckBoxPreference
        android:title="自動檢查更新"
        android:key="auto_check_update"
        android:defaultValue="true" />
    <Preference
        android:key="check_update"
        android:title="檢查更新">
    </Preference>
    <Preference
        android:key="about_title"
        android:title="@string/app_name">
    </Preference>
    <Preference
        android:key="about_author"
        android:title="@string/author"
        android:summary="Zankio">
    </Preference>
    <Preference
        android:key="about"
        android:title="@string/about">
        <intent android:action="org.zankio.cculife.ui.AboutActivity"/>
    </Preference>

</PreferenceScreen>
